--- a/querysentinel/build.gradle
+++ b/querysentinel/build.gradle
@@ -16,6 +16,10 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     implementation 'org.springframework:spring-test:6.1.5'
     implementation 'org.hibernate.orm:hibernate-core:6.3.1.Final'
@@ -25,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-autoconfigure:3.2.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
     implementation 'org.springframework:spring-jdbc:6.1.5'
+    api 'org.springframework.boot:spring-boot-starter-aop' 
 }
 
 publishing {
