--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'querysentinel'
-include 'querysentinel', 'demo'
+rootProject.name = 'querykeeper'
+include 'querykeeper', 'demo'
