--- a/querykeeper/build.gradle
+++ b/querykeeper/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.querykeeper'
-version = '1.0.0'
+version = '1.1.0'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -38,7 +38,7 @@ publishing {
             from components.java
             groupId = 'com.querykeeper'
             artifactId = 'querykeeper'
-            version = '1.0.0'
+            version = version
         }
     }
 }
