--- a/querykeeper/build.gradle
+++ b/querykeeper/build.gradle
@@ -7,7 +7,8 @@ group = 'com.querykeeper'
 version = '1.1.0'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
     withJavadocJar()
     withSourcesJar()
 }
@@ -21,15 +22,16 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-test:6.1.5'
-    implementation 'org.hibernate.orm:hibernate-core:6.3.1.Final'
-    implementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation 'ch.qos.logback:logback-classic:1.4.14'
-    implementation 'org.springframework.boot:spring-boot-autoconfigure:3.2.5'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
-    implementation 'org.springframework:spring-jdbc:6.1.5'
-    api 'org.springframework.boot:spring-boot-starter-aop' 
+    implementation 'org.springframework:spring-test:5.3.34'
+    implementation 'org.springframework.boot:spring-boot-autoconfigure:2.7.18'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.18'
+    implementation 'org.springframework:spring-jdbc:5.3.34'
+    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'ch.qos.logback:logback-classic:1.2.12'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+
+    api 'org.springframework.boot:spring-boot-starter-aop:2.7.18'
 }
 
 publishing {
